--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                         <p> &#x422; Twitter</p>
                         <p> &#x1D56A; Youtube</p>
                     </div><hr>
-                    <p class="copyright">Made with &#128151; by TAG-TripTok &#169;</p>
+                    <p class="copyright">Made with &#128151; by Shraddha Jaiswal &#169;</p>
 
 
                 </div>
